made tasks description and presentation refactoring

--- a/tasks/src/2.Sushi/2.1.Navigation.md
+++ b/tasks/src/2.Sushi/2.1.Navigation.md
@@ -1,18 +1,13 @@
 Перед тобой собранный из React-компонентов интернет-магазин суши.
-Правда в нем не прописана логика поведения. Все собрано из presentational компонентов.
+Правда в нем не прописана логика поведения.
 
 В этом задании нужно сделать так, чтобы заработало переключение страниц.
 
-Многое уже готово:
-- В `index.js` уже создается store с некоторым начальным состоянием:
-  `const store = createStore(rootReducer, preloadedState);`
-- В `actionCreators/index.js` есть функция `navigateTo`, создающая нужный action
-- `rootReducer` умеет правильно обрабатывать action, созданный `navigateTo`
+В `app/store.js` уже создается `store` с некоторым начальным состоянием:
+`const store = createStore(rootReducer, preloadedState);`.
 
-Но store никак не связан с React-компонентами.
-
-Эту связь надо установить:
-1. Добавь `Provider` из `react-redux` в компонент `App` в `index.js`
+Но `store` никак не связан с React-компонентами. Эту связь надо установить:
+1. Добавь `Provider` из `react-redux` в компонент `App` из `App.js`.
 Модуль `react-redux` уже установлен, но не импортирован.
 
     Пример создания провайдера:
@@ -28,28 +23,111 @@
     }
     ```
 
-2. Создай папку `containers`, в ней создай файлы `Navigation.js` и `Pages.js`,
-а в них контейнеры для соответствующих компонентов.
-Контейнер `Navigation` должен переключать страницу с помощью `navigateTo` и подсвечивать текущую.
-Контейнер `Pages` должен отображать текущую страницу.
+2. Сделай так, чтобы компоненты `Navigation.js` и `Pages.js` взаимодействовали со store. 
+Для получения данных из store используй хук `useSelector`.
+Компонент `Navigation` должен и подсвечивать текущую страницу.
+Компонент `Pages` должен отображать текущую страницу.
 
-    Пример создания контейнера:
+    Пример использования `useSelector`:
     ```js
-    import React from 'react';
-    import { connect } from 'react-redux';
-    import Timer from '../components/Timer';
-    import { changeSeconds } from '../actionCreators';
+    import React from "react";
+    import { useSelector } from "react-redux";
+    import { changeSeconds } from "../actionCreators";
     
-    export default connect(
-      (state, props) => ({
-        seconds: state.seconds
-      }),
-      (dispatch, props) => ({
-        onChange: value => dispatch(changeSeconds(value))
-      })
-    )(Timer);
+    export const Timer = () => {
+      const state = useSelector((state) => state.seconds);
+    
+      const handleDecrease = () => {
+        dispatch(changeSeconds(-1));
+      };
+    
+      const handleIncrease = () => {
+        dispatch(changeSeconds(1));
+      };
+    
+      return (
+        <div className="app">
+          <Timer
+            seconds={seconds}
+          />
+        </div>
+      );
+    };
     ```
 
-3. Сделай так, чтобы `App` использовал созданные контейнеры, а не компоненты.
-Не забудь убрать передачу ненужных контейнерам props.
+    Не забудь убрать передачу ненужных props в `Navigation.js` и `Pages.js` и почистить propTypes.
 
+    Теперь компоненты `Navigation.js` и `Pages.js` берут данные из `store`.
+    В этом можно убедиться, изменив дефолтное значение `page` в `defaultState` из `app/store.js`.
+    Однако при клике на элементы навигации ничего не происходит.
+    Необходимо еще написать обработку события переключения страницы.
+
+3. В `features/index.js` находится код `rootReducer`. Он пока не обрабатывает действия,
+а только возвращает текущее значение `state`.
+    
+    В `features/index.js` создай константу `NAVIGATE_TO_PAGE`.
+    ```js
+    const NAVIGATE_TO_PAGE = 'NAVIGATE_TO_PAGE';
+    ```
+
+    Далее добавь action creator:
+    ```js
+    export const navigateTo = page => ({
+      type: NAVIGATE_TO_PAGE,
+      page
+    });
+    ```
+    Action creator принимает целевую страницу `page` и создает экшен с типом `NAVIGATE_TO_PAGE`.
+
+4. Теперь добавь обработку действия с типом `NAVIGATE_TO_PAGE` в `rootReducer`.
+    
+    Редьюсер всегда должен возвращать актуальный `state`, поэтому для действия с типом `NAVIGATE_TO_PAGE` он должен 
+    вернуть новый `state` с актуальной целевой страницей `page`.
+    ```js
+    export function rootReducer(state = defaultState, action) {
+      switch (action.type) {
+        case NAVIGATE_TO_PAGE:
+          return {
+            ...state,
+            page: action.page
+          };
+      }
+      return state;
+    }
+    ```
+    Конструкция `switch` используется для того, чтобы проще было добавлять новые экшены.
+
+5. Осталось вызвать действие переключение станицы `navigateTo()` через `dispatch` из компонента `Navigation.js`.
+Для получения `dispatch` в функциональном компоненте используется хук `useDispatch`.
+
+    Пример использования `useSelector` и `useDispatch` в одном компоненте:
+    ```js
+    import React from "react";
+    import { useSelector, useDispatch } from "react-redux";
+    import { changeSeconds } from "../actionCreators";
+    
+    export const Timer = () => {
+      const state = useSelector((state) => state.seconds);
+      const dispatch = useDispatch();
+    
+      const handleDecrease = () => {
+        dispatch(changeSeconds(-1));
+      };
+    
+      const handleIncrease = () => {
+        dispatch(changeSeconds(1));
+      };
+    
+      return (
+        <div className="app">
+          <Timer
+            seconds={seconds}
+            onDecrease={handleDecrease}
+            onIncrease={handleIncrease}
+          />
+        </div>
+      );
+    };
+    ```
+
+    Если все сделано правильно, то при клике на элементы навигации, страницы будут переключаться. 
