--- a/tasks/src/2.Sushi/2.4.Logging.md
+++ b/tasks/src/2.Sushi/2.4.Logging.md
@@ -1,8 +1,7 @@
 В этом задании нужно сделать логирование всех действий.
 
 1. Получить информацию о всех действиях можно с помощью middleware.
-Подключи `applyMiddleware` из пакета `redux` к `index.js` приложения.
-   
+
     Создай заглушку middleware:
     ```js
     const customMiddleWare = ({ getState, dispatch }) => next => action => {
@@ -11,7 +10,11 @@
     ```
     И подключи ее к store:
     ```js
-    const store = createStore(rootReducer, preloadedState, applyMiddleware(customMiddleWare));
+    const store = configureStore({
+      reducer: rootReducer,
+      preloadedState,
+      middleware: [customMiddleWare],
+    });
     ```
     Созданный `customMiddleWare` просто прокидывает `action` дальше. Убедись, что все работает как прежде.
 
@@ -21,13 +24,11 @@
 3. Сделай так, чтобы при попытке перехода со страницы «Меню» на любую страницу, кроме страницы «Корзина»,
 все же происходил переход на страницу «Корзина».
     
-    Во-первых, придется отфильтровать все действия по типу `NAVIGATE_TO_PAGE`, а значит эту константу надо импортировать:
-    ```js
-    import * as actionTypes from './actionTypes';
-    ```
+    Во-первых, придется отфильтровать все действия по типу, а значит надо импортировать действие `navigateTo` 
+        из `/features/pages/pageSlice`, чтобы прочитать поле `type`.
     Во-вторых, придется использовать `getState()`, чтобы узнать текущую страницу.
     В-третьих, вместо вызова `next(action)` в описанных случаях надо передавать в `next` новое действие,
-    которое приведет к переходу на нужную страницу.
+        которое приведет к переходу на нужную страницу.
 
 4. Middleware для качественного логирования всех действий уже написан. Добавь его к `store`.
     
@@ -35,7 +36,7 @@
     ```js
     import logger from 'redux-logger';
     ```
-    Затем подключи: `applyMiddleware(customMiddleWare, logger)`
+    Затем передай в `configureStore` поле `middleware: [customMiddleWare, logger]`
     Посмотри, что выводится консоль при выполнении различных действий.
     Заметь, что какой переход логируется при переходе на страницу «Заказы» со страницы «Меню».
     Сделай вывод о порядке выполнения middleware, переданных в `applyMiddleware`.
