--- a/tasks/src/2.Sushi/2.4.Logging.md
+++ b/tasks/src/2.Sushi/2.4.Logging.md
@@ -11,7 +11,10 @@
     И подключи ее к store:
     ```js
     const store = configureStore({
-      reducer: rootReducer,
+      reducer: {
+        page: pageReducer,
+        products: productsReducer
+      },
       preloadedState,
       middleware: [customMiddleWare],
     });
