renamed pages feature to navigation

--- a/tasks/src/2.Sushi/2.3.Refactoring.md
+++ b/tasks/src/2.Sushi/2.3.Refactoring.md
@@ -1,10 +1,10 @@
-В этом задании нужно разбить `rootReducer` на слайсы `pageSlice`, `productsSlice`.
+В этом задании нужно разбить `rootReducer` на слайсы `navigationSlice`, `productsSlice`.
 
-1. Добавь файл `pageSlice.js` в директории `features/pages`. 
+1. Добавь файл `navigationSlice.js` в директории `features/navigation`. 
 
-    Для создания слайса `pageSlice` воспользуемся функцией `createSlice`.
+    Для создания слайса `navigationSlice` воспользуемся функцией `createSlice`.
     ```js
-    const pageSlice = createSlice({
+    const navigationSlice = createSlice({
       name: 'page',
       initialState: Page.menu,
       reducers: {
@@ -15,10 +15,10 @@
     });
    
     // За генерацию 'action creator' 'navigateTo' теперь отвечает 'createSlice'
-    export const { navigateTo } = pageSlice.actions;
+    export const { navigateTo } = navigationSlice.actions;
 
     // За генерацию редьюсера для сайлса также твечает createSlice`
-    export const pageReducer = pageSlice.reducer;
+    export const pageReducer = navigationSlice.reducer;
     ```
 
     Не забудь поправить импорт для `navigateTo` в `Navigation.js`.
@@ -26,7 +26,7 @@
     Обрати внимание, что каждый слайс несет ответственность только за свою часть полного состояния 
     и только эта часть инициализируется в слайсе по умолчанию: `initialState: Page.menu`.
 
-2. Создай файл `productsSlice.js` в директории `features/products`. Перенеси в него код для слайса продуктов по примеру `pageSlice.js`.
+2. Создай файл `productsSlice.js` в директории `features/products`. Перенеси в него код для слайса продуктов по примеру `navigationSlice.js`.
     ```js
     const productsSlice = createSlice({
       // ...
