UnstableFilter: improved description

--- a/tasks/src/2.Sushi/2.7.UnstableFilter.md
+++ b/tasks/src/2.Sushi/2.7.UnstableFilter.md
@@ -130,16 +130,20 @@
     export const filterProductsByTag = createAsyncThunk(
       'chosenProducts/createAsyncThunk',
       (tag, thunkAPI ) => {
-        thunkAPI.dispatch(changeProductTag(tag));
-    
-        return thunkAPI.extra.api.fetchProductIdsByTags(
-          thunkAPI.getState().chosenProducts.tags
-        );
+        // Напиши реализацию filterProductsByTag
       }
     );
     ```
+    В `filterProductsByTag` доступно все необходимое, чтобы сделать запрос к API.
 
-5. Теперь добавь обработку действия "pending" и "fulfilled". 
+    Напиши реализацию так, чтобы `filterProductsByTag` выполнял последовательно следующее:
+      - через `dispatch` вызывал действие `createAsyncThunk`, чтобы переключить чекбокс в фильтре
+      - производил загрузку через `api` и вернуть `Promise`
+
+    Код неудачной версии компонента `MenuFilter` удобно взять за основу `filterProductsByTag`.
+    Используй `filterProductsByTag` вместо `changeProductTag` в компоненте `MenuFilter`.
+
+6. Теперь добавь обработку действия "pending" и "fulfilled". 
    Эти создатели действий заданы в `filterProductsByTag` в качестве вложенных полей, и мы можем передать их в extraReducers:
     ```js
     const chosenProductsSlice = createSlice({
@@ -168,7 +172,7 @@
 
     Убедись, что фильтры полностью работают.
 
-6. Запросы к API могут заканчиваться ошибками и их надо обрабатывать.
+7. Запросы к API могут заканчиваться ошибками и их надо обрабатывать.
 Чтобы просимулировать это замени вызов `fetchProductIdsByTags` на `fetchProductIdsByTagsUnstable`.
 Нестабильный метод API падает в половине случаев.
 Теперь если несколько раз переключить фильтр, появится ошибка в консоли и бесконечный лоадер.
