removed word "container" from text

--- a/tasks/src/2.Sushi/2.8.Cart.md
+++ b/tasks/src/2.Sushi/2.8.Cart.md
@@ -17,5 +17,5 @@
 
 Тебе точно понадобится завести новый слайс в состоянии для хранения информации о покупках.
 Хорошая идея — начать с проектирования состояния.
-Допиши компоненты `Cart` и `Purchases`, а также используй контейнер `Product`, чтобы добавить функционал.
+Допиши компоненты `Cart`, `Product` и `Purchases`.
 Все остальное придумай самостоятельно!
