added slides with information about applying thunk

--- a/tasks/src/2.Sushi/2.7.UnstableFilter.md
+++ b/tasks/src/2.Sushi/2.7.UnstableFilter.md
@@ -99,7 +99,7 @@
 
     Но сначала нужно подключить `redux-thunk` `middleware`. 
     Функция `configureStore` умеет подключать `middleware` по умолчанию.
-    Для этого в поле `middleware` нужно передать callback функцию, которая получит функцию `getDefaultMiddlewareв` в 
+    Для этого в поле `middleware` нужно передать callback функцию, которая получит функцию `getDefaultMiddleware` в 
     качестве аргумента и должна вернуть массив `middleware`. Также `getDefaultMiddleware` позволяет сконфигурировать
    `middleware`:
 
@@ -175,6 +175,6 @@
 7. Запросы к API могут заканчиваться ошибками и их надо обрабатывать.
 Чтобы просимулировать это замени вызов `fetchProductIdsByTags` на `fetchProductIdsByTagsUnstable`.
 Нестабильный метод API падает в половине случаев.
-Теперь если несколько раз переключить фильтр, появится ошибка в консоли и бесконечный лоадер.
+Теперь, если несколько раз переключить фильтр, появится ошибка в консоли и бесконечный лоадер.
 `createAsyncThunk` умеет генерировать создатель действия `filterProductsByTag.rejected`. Добавь его в `extraReducers`.
 Сделай так, чтобы в случае ошибки исчезал лоадер и все чекбоксы фильтров сбрасывались.
