minor description fix

--- a/tasks/src/2.Sushi/2.3.Refactoring.md
+++ b/tasks/src/2.Sushi/2.3.Refactoring.md
@@ -17,7 +17,7 @@
     // За генерацию 'action creator' 'navigateTo' теперь отвечает 'createSlice'
     export const { navigateTo } = navigationSlice.actions;
 
-    // За генерацию редьюсера для сайлса также твечает createSlice`
+    // За генерацию редьюсера для слайса также отвечает createSlice`
     export const pageReducer = navigationSlice.reducer;
     ```
 
